# advent-of-code

./: .gitignore  README.md  flake.nix
2019/aoc-2019-01.playground/: Contents.swift
2019/aoc-2019-02.playground/: Contents.swift
2019/aoc-2019-03.playground/: Contents.swift
2019/aoc-2019-04.playground/: Contents.swift
2019/aoc-2019-05.playground/: Contents.swift
2020/: newday.sh
2020/01/: Cargo.toml
2020/02/: Cargo.toml
2020/03/: Cargo.toml
2020/04/: Cargo.toml
2020/05/: Cargo.toml
2020/06/: Cargo.toml
2020/07/: Cargo.toml
2020/08/: Cargo.toml
2020/09/: Cargo.toml
2020/11/: Cargo.toml
2020/12/: Cargo.toml
2020/13/: Cargo.toml
2020/14/: Cargo.toml
2020/14/src/: main.rs
2020/17/: Cargo.toml
2020/18/: Cargo.toml
2020/18/src/: calculator.lalrpop  main.rs
2020/common/: Cargo.toml
2022/: Cargo.toml
2022/01/: Cargo.toml
2022/02/: Cargo.toml
2022/03/: Cargo.toml
2022/04/: Cargo.toml
2022/05/: Cargo.toml
2022/06/: Cargo.toml
2022/07/: Cargo.toml
2022/08/: Cargo.toml
2022/09/: Cargo.toml
2022/10/: Cargo.toml
2022/11/: Cargo.toml
2022/12/: Cargo.toml
2022/13/: Cargo.toml
2022/14/: Cargo.toml
2022/15/: Cargo.toml
2022/18/: Cargo.toml
2022/20/: Cargo.toml
2022/21/: Cargo.toml
2022/23/: Cargo.toml
2022/23/src/: main.rs
2022/common/: Cargo.toml
2023/: Cargo.toml
2023/01/: Cargo.toml
2023/02/: Cargo.toml
2023/03/: Cargo.toml
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2023/07/: Cargo.toml
2024/: Cargo.toml
AdventOfCode-01.playground/: Contents.swift
(+83 files in other folders)
