[package]
name = "aoc-2020-14"
version = "0.1.0"
authors = ["cor <cor@pruijs.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-2020-common = { path = "../common/" }
lazy_static = "1.4.0"
re = "0.1.0"
regex = "1.4.2"
