[package]
name = "aoc-2022-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-2022-common = { path = "../common/" }
rayon = "1.6.1"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = 3
